# spector

./: .gitignore  .hgignore  .hgtags  .travis.yml  404.html  CHANGELOG.md  MANIFEST.in  Makefile  README.md  great-docs.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-build.in  setup.cfg  setup.py  sitemap.xml
.github/workflows/: build.yml  codspeed.yml  release.yml
benchmarks/: index.html
docs/: benchmarks.ipynb  conf.py  examples.ipynb  examples.qmd  index.rst  reference.md  reference.rst  requirements.in  requirements.txt
examples/: index.html
reference/: index.html
search/: search_index.json
spector/: __init__.py  matrix.py  vector.pyx
tests/: conftest.py  requirements.in  test_all.py  test_bench.py  test_benchmark.py  test_indices.py  test_matrix.py  test_vector.py
