[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spector"
dynamic = ["version"]
description = "Sparse vectors."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
authors = [{name = "Aric Coady", email = "aric.coady@gmail.com"}]
keywords = ["sparse", "array", "vector", "matrix", "numpy", "scipy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["numpy"]

[project.urls]
Homepage = "https://github.com/coady/spector"
Documentation = "https://coady.github.io/spector"

[tool.setuptools]
packages = ["spector"]

[tool.setuptools.dynamic]
version = {attr = "spector.__version__"}

[tool.setuptools.package-data]
spector = ["py.typed", "vector.pyx"]

[tool.black]
line-length = 120
skip-string-normalization = true

[[tool.mypy.overrides]]
module = "spector.vector"
ignore_missing_imports = true

[tool.coverage.run]
source = ["spector"]
branch = true
plugins = ["Cython.Coverage"]
