[metadata]
name = spector
version = attr: spector.__version__
author = Aric Coady
author_email = aric.coady@gmail.com
description = Sparse vectors.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/coady/spector
license = Apache Software License
keywords = sparse, array, vector, matrix, numpy, scipy
project_urls =
    Documentation = https://coady.github.io/spector
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
zip_safe = False
packages = spector
python_requires = >=3.7
install_requires = numpy

[options.package_data]
spector = py.typed, vector.pyx

[flake8]
max-line-length = 120

[coverage:run]
source = spector
branch = True
plugins = Cython.Coverage

[mypy]

[mypy-spector.vector]
ignore_missing_imports = True
